2001-09-14	Eric Norum <eric.norum@usask.ca>

	* include/rdbg/rdbg.h, src/ptrace.c: Modifications to make gcc 3.x happy.

2001-04-20	Eric Valette <valette@crf.canon.fr>

 	* mcp750 directory renamed new_exception processing as it
	supports many more CPU models.
	* configure.in, src/powerpc/Makefile.am,
	src/powerpc/new_exception_processing/Makefile.am,
	src/powerpc/new_exception_processing/remdeb_f.x: New files
	formerly in mcp750 plus modifications.
	* src/powerpc/mcp750/.cvsignore, src/powerpc/mcp750/Makefile.am,
	src/powerpc/mcp750/remdeb.h, src/powerpc/mcp750/remdeb_f.x,
	src/powerpc/mcp750/remdeb_svc.c, src/powerpc/mcp750/remdeb_xdr.c:
	Removed when moved to new_exception_processing.
	* configure.in, src/powerpc/Makefile.am,
	src/powerpc/new_exception_processing/Makefile.am,
	src/powerpc/new_exception_processing/remdeb_f.x: Modified as
	part of this effort to add support for the MPC8xx.

2001-02-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rdbg/Makefile.am, include/rdbg/i386/Makefile.am,
	include/rdbg/m68k/Makefile.am, include/rdbg/powerpc/Makefile.am:
	Cleanup including more proper style on include files.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-25      Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
	Switch to GNU canonicalization.

2000-10-19  Antti P Miettinen  <anmietti@trshp.ntc.nokia.com>

	* src/m68k/any/remdeb.h, src/m68k/any/remdeb_xdr.c,
	src/m68k/any/remdeb_svc.c: New files missed in merger.

2000-10-19  Antti P Miettinen  <anmietti@trshp.ntc.nokia.com>

	* configure.in: Add m68k support.
	* include/rdbg/m68k, src/m68k, src/m68k/any: New subdirectory.
	* src/_servtgt.c: add status text to prinf upon task creation failure.