@@ -30,6 +30,8 @@ X_FILES = remdeb.x remdeb_f.x
 
 OBJS = $(GEN_C_O_FILES) $(C_O_FILES) $(S_O_FILES)
 
+MAINTAINERCLEANFILES = $(H_FILES) $(GEN_C_FILES)
+
 include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../automake/compile.am
 include $(top_srcdir)/../../../automake/lib.am
@@ -37,8 +39,6 @@ include $(top_srcdir)/../../../automake/lib.am
 #
 # Add local stuff here using +=
 #
-
-MAINTAINERCLEANFILES += $(H_FILES) $(GEN_C_FILES)
 
 FRONTEND = \"$(RTEMS_CPU)/any/remdeb_f.x\"
 
